gcc/testsuite/rust/compile/tuple1.rs
fn main() {
    let a: (i32, bool) = (123, 123); // { dg-error "expected" }
    let b;
    b = (456, 5f32);
}
